# scryfall-py

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: docs.yml  precommit.yml  publish.yml  pytest.yml
docs/: api.rst  conf.py  guide.rst  index.rst
pyfall/: __init__.py  const.py  utils.py
pyfall/client/: __init__.py  error.py  route.py
pyfall/client/http/: http_client.py
pyfall/client/http/http_requests/: card.py  set.py
pyfall/models/: __init__.py  api.py  base.py  bulk.py  cards.py  catalogs.py  enums.py  rulings.py  sets.py  symbols.py
pyfall/models/internal/: protocols.py
scryfall/: __init__.py  const.py
scryfall/client/: __init__.py  error.py  route.py
scryfall/client/http/: set.py
scryfall/client/http/http_requests/: card.py
scryfall/models/: __init__.py  api.py  base.py  bulk.py  cards.py  catalogs.py  enums.py  sets.py  symbols.py
scryfall/models/internal/: protocols.py
tests/: test_card_endpoints.py  test_set_endpoints.py
