[project]
name = "pyfall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipython>=8.32.0",
    "rich>=13.9.4",
    "ruff>=0.9.7",
]
